--- a/style.css
+++ b/style.css
@@ -110,8 +110,35 @@ h2 {
 
 /* Set footer styles */
 footer {
-    background-color: #333;
+    background-color: #000;
     color: #fff;
-    padding: 10px;
-    text-align: center;
+    padding: 20px 0;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container p {
+    margin: 0;
+}
+
+.container ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.container ul li {
+    display: inline;
+}
+
+.container ul li a {
+    color: #fff;
+    margin-left: 10px;
+    text-decoration: none;
 }
