--- a/style.css
+++ b/style.css
@@ -15,7 +15,24 @@ body {
 header {
     background-color: #8a00fc;
     color: #fff;
-    padding: 20px;
+    /* padding: 10px; */
+}
+.header-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 1px solid #8a00fc; 
+}
+#home h1, #home p {
+    margin-bottom: 10px;
 }
 
 .logo {
@@ -24,7 +41,7 @@ header {
 }
 
 .logo img {
-    max-width: 80px;
+    max-width: 120px;
     height: auto;
 }
 
@@ -43,46 +60,73 @@ nav ul li {
     display: inline;
 }
 
-/* nav ul li a {
+nav ul li a {
     color: #ffffff;
-    margin-left: 20px;
+    margin-left: 10px;
     text-decoration: none;
-} */
+    font-weight: bold;
+}
 
-/* nav ul li a:hover {
+nav ul li a:hover {
     text-decoration: underline;
-} */
+}
 
 /* Set section styles */
 section {
-    padding: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: space-evenly;
+    align-items: center;
+    /* border-bottom: 2px solid #000000;  */
 }
 
 h1 {
     font-size: 36px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     /* flex-basis: 100%; */
 }
 
 h2 {
-    font-size: 24px;
+    font-size: 36px;
     margin-bottom: 20px;
     flex-basis: 100%;
+    /* padding-left: 70px; */
+    text-align: center;
+}
+
+.product {
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr); 
+    grid-gap: 10px; 
 }
 
 .product, .deal {
     flex-basis: calc(30% - 30px);
-    margin-right: 30px;
-    margin-bottom: 30px;
+    /* margin-right: 30px;
+    margin-bottom: 30px; */
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    text-align: center;
+    padding-top: 10px;
 }
 
 .product img, .deal img {
-    max-height: 100%;
+    /* max-height: 100%; */
+    max-width: 350px;
     width: auto;
+    /* border: 1px solid #000; */
+    background-color: #f6f6f9;
+    padding: 50px;
+
 }
 
 .product h3, .deal h3 {
@@ -114,37 +158,43 @@ footer {
     background-color: #000;
     color: #fff;
     padding: 20px 0;
+    /* display: flex;
+    flex-direction: column;
+    align-items: flex-start; Updated */
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
+.footer-container {
+    /* max-width: 1200px; */
+    /* margin: 0 auto; */
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    padding-left: 20px;
+    padding-right: 20px;
+    flex: 1; /* Added */
 }
 
-.container p {
+.footer-container p {
     margin: 0;
 }
 
-.container ul {
+.footer-container ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-.container ul li {
+.footer-container ul li {
     display: inline;
 }
 
-.container ul li a {
+.footer-container ul li a {
     color: #fff;
     margin-left: 20px;
     text-decoration: none;
 }
 
-.container ul li a:hover {
+.footer-container ul li a:hover {
     text-decoration: underline;
 }
 
@@ -170,12 +220,9 @@ footer {
 #chat-icon img {
     width: 60px;
     height: 60px;
-    /* Add any styling for the chat icon image, such as changing the color or adding effects */
 }
 
 #chat-window {
-    /* Style for the chat bot window, such as background color, width, height, etc. */
-    /* This is the window that will appear when the chat icon is clicked */
     display: none; /* Hide the chat bot window by default */
     position: absolute;
     bottom: 80px;
@@ -198,7 +245,6 @@ footer {
     margin: 0;
     border-radius: 5px;
     background-color: #d3e0ff;
-    /* Add any styling for the chat message, such as font size, color, etc. */
 }
 
 #chat-input-container {
@@ -212,7 +258,6 @@ footer {
     border-radius: 20px;
     border: none;
     outline: none;
-    /* Add any additional styles for the input box, such as font size, color, etc. */
 }
 
 #chat-send-button {
@@ -223,5 +268,4 @@ footer {
     background-color: #8a00fc;
     color: #fff;
     cursor: pointer;
-    /* Add any additional styles for the send button, such as font size, color, etc. */
 }
