--- a/style.css
+++ b/style.css
@@ -271,3 +271,47 @@ footer {
     color: #fff;
     cursor: pointer;
 }
+
+/* Product page */
+
+.product_page_contents {
+
+}
+
+.prod-item {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-top: 1px solid #8a00fc;
+    /* border-bottom: 1px solid #8a00fc; */
+}
+
+.left-col {
+    align-items: center;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.middle-col {
+    flex: 1;
+    align-items: center; 
+    flex-direction: column;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.name_buy {
+    
+    align-items: center; 
+    justify-content: flex-end; 
+    padding-left: 40px;
+    padding-right: 40px;
+
+    }
+
+.name_buy p {
+    font-size: 25px;
+    font-weight: bold;
+}
