--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 1px solid #8a00fc; 
+    border-bottom: 64.5167px solid #8a00fc; 
     padding-top: 94px;
+    padding-bottom: 30px;
 }
 #home h1, #home p {
     margin-bottom: 10px;
@@ -79,11 +80,11 @@ nav ul li a:hover {
 
 /* Set section styles */
 section {
-    padding-left: 100px;
+    /* padding-left: 100px;
     padding-right: 100px;
     padding-top: 30px;
-    padding-bottom: 30px;
-    display: flex;
+    padding-bottom: 30px; */
+    /* display: flex; */
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
@@ -104,30 +105,40 @@ h2 {
     text-align: center;
 }
 
-.product {
-    padding-left: 100px;
-    padding-right: 100px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    display: grid; 
-    grid-template-columns: repeat(2, 1fr); 
-    grid-gap: 10px; 
+.new_prod_container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-rows: repeat(2, 1fr); */
+    gap: 10px;
 }
 
-.product, .deal {
+.new_prod_container .new_prod {
+}
+
+.new_prod {
+    /* padding-left: 100px;
+    padding-right: 100px; */
+    /* padding-top: 30px;
+    padding-bottom: 30px; */
+    /* display: grid; 
+    grid-template-columns: repeat(2, 1fr); 
+    grid-gap: 10px;  */
+}
+
+.new_prod {
     flex-basis: calc(30% - 30px);
     /* margin-right: 30px;
     margin-bottom: 30px; */
-    display: flex; 
-    flex-direction: column; 
+    /* display: flex; 
+    flex-direction: column;  */
     align-items: center; 
     text-align: center;
-    padding-top: 10px;
+    /* padding-top: 10px; */
 }
 
-.product img, .deal img {
+.new_prod img {
     /* max-height: 100%; */
-    max-width: 350px;
+    max-width: 270px;
     width: auto;
     /* border: 1px solid #000; */
     background-color: #f6f6f9;
@@ -135,12 +146,12 @@ h2 {
 
 }
 
-.product h3, .deal h3 {
+.new_prod h3 {
     font-size: 20px;
     margin-bottom: 10px;
 }
 
-.product p, .deal p {
+.new_prod p {
     font-size: 16px;
     color: #777;
     margin-bottom: 10px;
