Updated Landing Page and Buttons

--- a/style.css
+++ b/style.css
@@ -166,11 +166,13 @@ h2 {
     text-decoration: none;
     transition: background-color 0.3s ease-in-out;
     border-radius: .375rem;
+    font-weight: bold;
 }
 
 .cta:hover {
-    background-color: #FFD700;
+    background-color: #4d008b;
 }
+
 
 /* Set footer styles */
 footer {
