Fixed Footer to stick at bottom of page

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -22,13 +22,13 @@ footer {
     flex: 1; /* Added */
 }
 
-.page_container {
+/* .page_container {
     position: relative;
 }
 
 .content_wrap {
     padding-bottom: 2.5rem;
-}
+} */
 
 .footer-container p {
     margin: 0;
