--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,7 @@ h1 {
     max-width: 400px;
     max-height: 400px;
 
-    padding: 20px;
+    padding: 20px 20px 15px 20px;
     text-align: center;
     
     border: 1px solid #e2e2e2;
@@ -235,3 +235,4 @@ h1 {
     text-decoration: underline;
     color: darkblue;
 }
+
