--- a/src/pages/BrowseProducts.css
+++ b/src/pages/BrowseProducts.css
@@ -1,9 +1,5 @@
-
-
-
-
 /* checkboxes and labels*/
-label {
+/* label {
     display: block;
     margin-bottom: 10px; 
 }
@@ -12,12 +8,11 @@ input[type="checkbox"] {
     display: inline-block;
     vertical-align: middle;
     margin-right: 5px;
-}
+} */
 
 /* for the sidebar*/
 .filter {
     height: 100%;
-    /* max-height: 400px; */
     width: 17%;
     min-width: 10%;
     position: sticky;
@@ -43,11 +38,7 @@ input[type="checkbox"] {
 }
 
 /* Product list */
-.product_page_contents {
-
-}
-
-.prod-item {
+/* .prod-item {
     display: flex;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -57,10 +48,6 @@ input[type="checkbox"] {
 .prod_browse{
     display: flex;
     flex-direction: column;
-    /* margin-left: auto;
-    margin-right: auto; */
-    /* max-width: 800px; */
-    /* border-bottom: 1px solid #8a00fc; */
     margin: 100px 0px;
     max-width: 1406px;
 }
@@ -73,7 +60,6 @@ input[type="checkbox"] {
     align-items: center;
     padding-right: 2rem;
     padding-left: 2rem;
-    /* width: 33%; */
 }
 
 .middle-col {
@@ -83,7 +69,6 @@ input[type="checkbox"] {
     padding-left: 2rem;
     padding-right: 2rem;
     max-width: 697px;
-    /* width: 40%; */
 }
 .name_buy {
     align-items: center;
@@ -102,4 +87,4 @@ input[type="checkbox"] {
 .prod_name {
     font-weight: bold;
     padding-bottom: 1rem;
-}
+} */
