--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,7 +5,7 @@ header {
 }
 .header-container {
     max-width: 1200px;
-    min-height: 65px;
+    min-height: 66px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -14,8 +14,8 @@ header {
 
 .logo {
     flex-basis: 150px;
-    margin-right: 10px;
-    padding-left: 20px;
+    /* margin-right: 10px; */
+    margin-left: 20px;
 }
 
 .logo img {
@@ -34,24 +34,86 @@ nav {
 }
 
 nav ul {
-    list-style: none;
+    /* list-style: none;
     margin: 0;
-    padding: 0;
+    padding: 0; */
+    padding-right: 50px;
 }
 
 nav ul li {
     display: inline;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bold;
 }
 
 nav ul li a {
     color: #ffffff;
-    margin-left: 5px;
+    /* margin-left: 5px; */
     padding-right: 20px;
     text-decoration: none;
 }
-
 nav ul li a:hover {
     text-decoration: underline;
 }
+
+.header-container {
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: space-between; */
+    /* align-items: center; */
+}
+
+.logo-search-cart {
+    display: flex;
+    align-items: center;
+}
+.logo-search-cart a:hover img {
+    filter: drop-shadow(2px 8px 8px  #cfcfcf);
+    -webkit-transition : -webkit-filter 500ms linear yassified boiiiiii
+}
+.search-bar {
+    max-height: 20px;
+    margin-left: 20px;
+    max-width: 160px;
+}
+
+/* Cart */
+.cart-button {
+    position: fixed;
+    top: 11px;
+    right: 20px;
+    padding: 10px;
+    /* background-color: #f1c40f; */
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 20%;
+    width: 40px;
+    /* margin-right: 60px; */
+}
+.cart-container {
+    position: fixed;
+    top: 66px;
+    right: -300px;
+    width: 300px;
+    height: 100%;
+    background-color: #fff;
+    transition: all 0.3s ease-in-out;
+    z-index: 9999;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    overflow-y: scroll;
+  }
+.cart-container.open {
+    right: 0;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+  }
