--- a/client/src/components/landing_page/ItemCards_user.css
+++ b/client/src/components/landing_page/ItemCards_user.css
@@ -6,7 +6,7 @@
 #personal_products .cta {
     /* padding: 0 60px; */
     padding: 10px 20px;
-    width: 240px;
+    /* width: 240px; */
     height: auto;
 }
 
@@ -19,27 +19,30 @@
 .personal-deals {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: nowrap;
 
     padding: 0 40px;
+    margin: 0 60px;
+
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    flex-basis: calc(100%/4);
 }
 .personal-prod {
-/* 
-    max-width: 300px;
-    max-height: 300px;
-
-    padding: 20px 20px 15px 20px;
-    text-align: center;
-    
-    border: 1px solid #e2e2e2;
-    border-radius: 5px; */
-
     padding: 20px 20px 15px 20px;
     text-align: center;
     border: 1px solid #e2e2e2;
     border-radius: 5px;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 260px;
+    max-width: 340px;
+
+    display: flex;
+    flex-direction: column;
+
+    flex-grow: 0; /* dont grow beyond original size */
+    flex-shrink: 0; /* if no space, dont shrink */
+    /* flex-basis: calc(100%/4); */
 }
 .personal-prod img {
     max-height: 120px;
